Added product Description

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="app">
       <h1>{{ product }}</h1>
-      <h2></h2>
+      <h2>{{ productDescription }}</h2>
     </div>
 
     <!-- Import App -->
